fix: accessibility issues such as contrast, form labels

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -99,6 +99,10 @@ body {
     color: #000 !important;
 }
 
+.text-white {
+    color: #fff !important;
+}
+
 .border-black {
     border: 1px solid black !important;
 }
